[metadata]
name = mollusk
version = 0.1
description = Molecular Parser and Plotter
long_description = file: README.md
url = https://github.com/georglind/mollusk
author = Kim G. L. Pedersen
author_email = georglind@gmail.com
license = MIT

[options]
packages = mol
zip_safe = True
include_package_data = True
setup_requires = setuptools_scm;
test_suite = tests.test_euclid

[build-system]
requires = ["setuptools", "setuptools_scm", "wheel"]
